@@ -1,3 +1,9 @@
+2002-08-08  Nick Garnett  <nickg@calivar.demon.co.uk>
+
+	* src/select.cxx (select): Changed mechanism for calculating
+	select timeout to avoid possible race conditions between this code
+	and the timer DSR.
+
 2002-05-29  Jesper Skov  <jskov@redhat.com>
 
 	* tests/fileio1.c: Removed strcat definition. Rely on string.h to
